tests/sumo/errors/too_many_teleports/output.sumo.meso
Loading net-file from 'net.net.xml' ... done (1ms).
Loading route-files incrementally from 'input_routes.rou.xml'
Loading done.
Simulation version v1_21_0+1557-fb9ec070d59 started with time: 0.00.
Simulation ended at time: 4026.00.
Reason: Too many teleports.
Performance:
 Duration: 0.02s
 Real time factor: 268400
 UPS: 43628066.666667
Vehicles:
 Inserted: 308 (Loaded: 393)
 Running: 264
 Waiting: 85
 Teleports: 6 (Jam: 6)
